[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["dev0128 <joo@clo-guard.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.13.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
